--- a/views/header.ejs
+++ b/views/header.ejs
@@ -16,7 +16,7 @@
           <li id="about"><a href="/service">SERVICES AVAILABLE</a></li>
           <li id="register"><a href="/register">REGISTER</a></li>
           <li id="login"><a href="/login">LOG IN</a></li>
-          <li id="login"><a href="/login">COMPOSE</a></li>
+          <li id="compose"><a href="/compose">COMPOSE</a></li>
           <li id="logout"><a href='/logout' role="button">LOG OUT</a></li>
         </ul>
     </div>
